--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -12,7 +12,7 @@ phases:
         
     build:
       commands:
-        - terraform $TF_COMMAND -auto-approve
+        - terraform $TF_COMMAND --auto-approve
         
     post_build:
       commands:
