--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -3,8 +3,9 @@ version: 0.2
 phases:
   install:
     commands:
-      - "export release=AmazonLinux"
-      - "sudo dnf install -y dnf-plugins-core"
+      - "sudo yum clean all"
+      - "sudo yum update"
+      - "sudo yum install -y yum-utils"
       - "sudo yum-config-manager --add-repo https://rpm.releases.hashicorp.com/AmazonLinux/hashicorp.repo"
       - "sudo dnf install -y terraform"
     pre_build:
