--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -3,6 +3,7 @@ version: 0.2
 phases:
   install:
     commands:     
+      - "yum update -y"
       - "yum install -y yum-utils"
       - "yum-config-manager --add-repo https://rpm.releases.hashicorp.com/AmazonLinux/hashicorp.repo"
       - "yum -y install terraform"
