--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -5,8 +5,7 @@ phases:
     commands:     
       - "yum install -y yum-utils"
       - "yum-config-manager --add-repo https://rpm.releases.hashicorp.com/AmazonLinux/hashicorp.repo"
-      - "yum --disableplugin=priorities"
-      - "yum -y install terraform"
+      - "yum -y --disableplugin=priorities install terraform"
     pre_build:
       commands:
         - terraform init
