--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -3,9 +3,12 @@ version: 0.2
 phases:
   install:
     commands:     
-      - "yum install -y yum-utils"
-      - "yum-config-manager --add-repo https://rpm.releases.hashicorp.com/AmazonLinux/hashicorp.repo"
-      - "yum -y --disableplugin=priorities install terraform"
+      - "sudo apt-get update && sudo apt-get install -y gnupg software-properties-common"
+      - "wget -O- https://apt.releases.hashicorp.com/gpg | \ gpg --dearmor | \ tee /usr/share/keyrings/hashicorp-archive-keyring.gpg"
+      - "gpg --no-default-keyring \ --keyring /usr/share/keyrings/hashicorp-archive-keyring.gpg \ --fingerprint"
+      - "echo 'deb [signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] \ https://apt.releases.hashicorp.com $(lsb_release -cs) main' | \ tee /etc/apt/sources.list.d/hashicorp.list"
+      - "apt update"
+      - "apt-get install terraform"
     pre_build:
       commands:
         - terraform init
