--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -7,8 +7,8 @@ phases:
       - "wget -O- https://apt.releases.hashicorp.com/gpg | \ gpg --dearmor | \ tee /usr/share/keyrings/hashicorp-archive-keyring.gpg"
       - "gpg --no-default-keyring \ --keyring /usr/share/keyrings/hashicorp-archive-keyring.gpg \ --fingerprint"
       - "echo 'deb [signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] \ https://apt.releases.hashicorp.com $(lsb_release -cs) main' | \ tee /etc/apt/sources.list.d/hashicorp.list"
-      - "apt update"
-      - "apt-get install terraform"
+      - "sudo apt update -y"
+      - "apt-get install terraform -y"
     pre_build:
       commands:
         - terraform init
