--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -7,6 +7,7 @@ phases:
       - "wget -O- https://apt.releases.hashicorp.com/gpg | \ gpg --dearmor | \ tee /usr/share/keyrings/hashicorp-archive-keyring.gpg"
       - "gpg --no-default-keyring \ --keyring /usr/share/keyrings/hashicorp-archive-keyring.gpg \ --fingerprint"
       - "echo 'deb [signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] \ https://apt.releases.hashicorp.com $(lsb_release -cs) main' | \ tee /etc/apt/sources.list.d/hashicorp.list"
+      - "sudo apt-get update -y"
       - "apt-get install terraform -y"
     pre_build:
       commands:
