--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -3,12 +3,9 @@ version: 0.2
 phases:
   install:
     commands:     
-      - "sudo apt-get update && sudo apt-get install -y gnupg software-properties-common"
-      - "wget -O- https://apt.releases.hashicorp.com/gpg | \ gpg --dearmor | \ tee /usr/share/keyrings/hashicorp-archive-keyring.gpg"
-      - "gpg --no-default-keyring \ --keyring /usr/share/keyrings/hashicorp-archive-keyring.gpg \ --fingerprint"
-      - "echo 'deb [signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] \ https://apt.releases.hashicorp.com $(lsb_release -cs) main' | \ tee /etc/apt/sources.list.d/hashicorp.list"
-      - "sudo apt-get update -y"
-      - "apt-get install terraform -y"
+      - "wget -O- https://apt.releases.hashicorp.com/gpg | gpg --dearmor | sudo tee /usr/share/keyrings/hashicorp-archive-keyring.gpg"
+      - "echo "deb [signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] https://apt.releases.hashicorp.com $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/hashicorp.list"
+      - "sudo apt update && sudo apt install terraform"     
     pre_build:
       commands:
         - terraform init
