--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -5,7 +5,8 @@ phases:
     commands:     
       - "wget -O- https://apt.releases.hashicorp.com/gpg | gpg --dearmor | sudo tee /usr/share/keyrings/hashicorp-archive-keyring.gpg"
       - "echo 'deb [signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] https://apt.releases.hashicorp.com $(lsb_release -cs) main' | sudo tee /etc/apt/sources.list.d/hashicorp.list"
-      - "apt update && apt install terraform"     
+      - "apt update -y"
+      - "apt install terraform -y"
     pre_build:
       commands:
         - terraform init
