--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -3,8 +3,8 @@ version: 0.2
 phases:
   install:
     commands:     
-      - "wget -O- https://apt.releases.hashicorp.com/gpg | gpg --dearmor | sudo tee /usr/share/keyrings/hashicorp-archive-keyring.gpg"
-      - "echo 'deb [signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] https://apt.releases.hashicorp.com $(lsb_release -cs) main' | sudo tee /etc/apt/sources.list.d/hashicorp.list"
+      - "wget -O- https://apt.releases.hashicorp.com/gpg | gpg --dearmor | tee /usr/share/keyrings/hashicorp-archive-keyring.gpg"
+      - "echo 'deb [signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] https://apt.releases.hashicorp.com $(lsb_release -cs) main' | tee /etc/apt/sources.list.d/hashicorp.list"
       - "apt update 2>/dev/null | grep packages | cut -d '.' -f 1"
       - "apt install terraform 2>/dev/null | grep packages | cut -d '.' -f 1"
     pre_build:
