--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -5,8 +5,8 @@ phases:
     commands:
       - "wget -O- https://apt.releases.hashicorp.com/gpg | gpg --dearmor | tee /usr/share/keyrings/hashicorp-archive-keyring.gpg"
       - "echo 'deb [signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] https://apt.releases.hashicorp.com $(lsb_release -cs) main' | tee /etc/apt/sources.list.d/hashicorp.list"
-      - "apt update 2>/dev/null | grep packages | cut -d '.' -f 1"
-      - "apt install terraform 2>/dev/null | grep packages | cut -d '.' -f 1"
+      - "apt update"
+      - "apt install terraform"
         
   build:
     commands:
