--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -3,10 +3,9 @@ version: 0.2
 phases:
   pre_build:
     commands:
-      - "wget -O- https://apt.releases.hashicorp.com/gpg | gpg --dearmor | tee /usr/share/keyrings/hashicorp-archive-keyring.gpg"
-      - "echo 'deb [signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] https://apt.releases.hashicorp.com $(lsb_release -cs) main' | tee /etc/apt/sources.list.d/hashicorp.list"
-      - "apt update"
-      - "apt install terraform"
+      - sudo yum install -y yum-utils
+      - sudo yum-config-manager --add-repo https://rpm.releases.hashicorp.com/AmazonLinux/hashicorp.repo
+      - sudo yum -y install terraform
         
   build:
     commands:
