--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -12,7 +12,7 @@ phases:
       - export AWS_ACCESS_KEY_ID=$ACCESS
       - export AWS_SECRET_ACCESS_KEY=$SECRET
       - terraform init
-      - terraform apply --auto-approve
+      - terraform destroy --auto-approve
         
   post_build:
     commands:
